# numerai_python

./: README.md  pyproject.toml  pyproject.toml.old  requirements.txt
app/: numerai_sbumit.py
app/analysis/: cluster.py  compound_interest.py
app/data/: data002.py  data_import.py  download.py
app/ensemble/: select.py
app/logger/: log.py
app/metrics/: scoring.py
app/model/: NumeraiModel.py  base_model.py  ensemble.py  example.py  feature_selection.py  model002.py  model003.py
app/pipe/: pipe001.py  pipe002.py  pipe003.py
app/submit/: __init__.py  submit002.py  submit003.py
app/train/: train001.py  train002.py  train003.py
app/transformer/: neutralization.py
app/tune/: bayesian_tuning.py
scratch/: 2024.12.02.feature_engineering.py  2025.01.19.ensemble_analysis.py  2025.01.24.sub_model_train.py
scripts/: download_all.py  download_live.py  predict_and_submit.py  submit_demo_model.py  train_model.py
