[tool.poetry]
name = "numerai-python"
version = "0.1.0"
description = ""
authors = ["Kentaro Kuwata <kuwaken0925@gmail.com>"]
readme = "README.md"
packages = [{include = "numerai_python"}]

[tool.poetry.dependencies]
python = "^3.11"
scipy = "1.9.2"
asttokens = "^2.2.1"
backcall = "^0.2.0"
black = "^23.7.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.6"
decorator = "^5.1.1"
executing = "^1.2.0"
idna = "^3.4"
ipython = "^8.14.0"
isort = "^5.12.0"
jedi = "^0.18.2"
joblib = "^1.3.1"
lightgbm = "^4.0.0"
matplotlib-inline = "^0.1.6"
mypy-extensions = "^1.0.0"
numerapi = "^2.15.0"
numpy = "^1.25.1"
packaging = "^23.1"
pandas = "^2.0.3"
parso = "^0.8.3"
pathspec = "^0.11.1"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
platformdirs = "^3.9.1"
prompt-toolkit = "^3.0.39"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pyarrow = "^12.0.1"
pygments = "^2.15.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
six = "^1.16.0"
stack-data = "^0.6.2"
threadpoolctl = "^3.2.0"
tqdm = "^4.65.0"
traitlets = "^5.9.0"
tzdata = "^2023.3"
urllib3 = "^2.0.4"
wcwidth = "^0.2.6"
xgboost = "^1.7.6"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
graphviz = "^0.20.1"
optuna = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
